Update sec champion

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -20,7 +20,7 @@ spec:
   type: "security_champion"
   parent: "it_security_champions"
   members:
-  - "eliihen"
+  - "omaen"
   children:
   - "resource:argo-landing"
 ---
